compiling_error.txt
C:\Users\82167\Desktop\cpp-primer\exercise3_2_2.cpp:12:1: error: expected unqualified-id at end of input
 int 
 ^~~
